# brand-guidelines-builder

brand-guidelines-builder/: CLAUDE.md  brand_guide_generator_build_plan.md  brand_guidelines_template.py
brand-guidelines-builder/backend/: .env.example  docker-compose.yml  pyproject.toml  railway-worker.toml  railway.toml  requirements.txt
brand-guidelines-builder/backend/src/: celery_app.py  config.py  main.py
brand-guidelines-builder/backend/src/api/: routes.py
brand-guidelines-builder/backend/src/extractors/: __init__.py  ai_analyzer.py  color_extractor.py  logo_extractor.py  typography_extractor.py
brand-guidelines-builder/backend/src/generator/: __init__.py  pdf_generator.py
brand-guidelines-builder/backend/src/models/: __init__.py  brand_data.py  job.py
brand-guidelines-builder/backend/src/scraper/: __init__.py  website_scraper.py
brand-guidelines-builder/backend/src/utils/: __init__.py  color_utils.py
brand-guidelines-builder/backend/src/workers/: __init__.py  tasks.py
brand-guidelines-builder/frontend/app/: globals.css  layout.tsx  page.tsx
brand-guidelines-builder/frontend/app/extract/[jobId]/: page.tsx
brand-guidelines-builder/frontend/app/preview/[jobId]/: page.tsx
