[project]
name = "brand-guide-generator"
version = "0.1.0"
description = "Automatically generate professional brand guidelines from any website URL"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.41.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "colorthief>=0.2.1",
    "reportlab>=4.1.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "cssutils>=2.9.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
